--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,21 @@
+# This file is a template, and might need editing before it works on your project.
+# This is a sample GitLab CI/CD configuration file that should run without any modifications.
+# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
+# it uses echo commands to simulate the pipeline execution.
+#
+# A pipeline is composed of independent jobs that run scripts, grouped into stages.
+# Stages run in sequential order, but jobs within stages run in parallel.
+#
+# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
+#
+# You can copy and paste this template into a new `.gitlab-ci.yml` file.
+# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
+#
+# To contribute improvements to CI/CD templates, please follow the Development guide at:
+# https://docs.gitlab.com/ee/development/cicd/templates.html
+# This specific template is located at:
+# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
+
 stages:          # List of stages for jobs, and their order of execution
   - execute-script
   - build
@@ -38,6 +56,21 @@ debug_pipeline:
     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
   rules:
     - if: '$CI_PIPELINE_SOURCE == "trigger"' # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
+
+build-job-issue:       # This job runs in the build stage, which runs first.
+  stage: build
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+    - echo "Compiling the code..."
+    - echo "Compile complete."
+
+build-job-pr:       # This job runs in the build stage, which runs first.
+  stage: build
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+    - echo "Compiling the code..."
+    - echo "Compile complete."
+
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
