--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,9 +18,9 @@
 
 stages:          # List of stages for jobs, and their order of execution
   - execute-script
-  - build
-  - test
-  - deploy
+  # - build
+  # - test
+  # - deploy
 
 
 
@@ -47,108 +47,6 @@ execute-python-on-pr-update:
     - if: '$CI_PIPELINE_SOURCE == "web"'
     # - if: '$CI_PIPELINE_SOURCE == "trigger"' 
 
-# Job de débogage pour vérifier le contexte du pipeline
-debug_pipeline:
-  stage: execute-script
-  script:
-    - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
-    - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
-    - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "trigger"' # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
-
-
-
-build-job:       # This job runs in the build stage, which runs first.
-  stage: build
-  script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
-
-unit-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
-  script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
-    - echo "Code coverage is 90%"
-
-lint-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
-  script:
-    - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
-    - echo "No lint issues found."
-
-deploy-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  environment: production
-  script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
-
-
-
-
-
-
-# stages:
-#   - build
-#   - test
-#   - deploy
-#   - execute-script
-
-# variables:
-#   GIT_STRATEGY: clone
-
-# # Jobs pour le pipeline de base (build, test, deploy)
-# build-job:
-#   stage: build
-#   script:
-#     - echo "Compiling the code..."
-#     - echo "Compile complete."
-
-# unit-test-job:
-#   stage: test
-#   script:
-#     - echo "Running unit tests... This will take about 60 seconds."
-#     - sleep 60
-#     - echo "Code coverage is 90%"
-
-# lint-test-job:
-#   stage: test
-#   script:
-#     - echo "Linting code... This will take about 10 seconds."
-#     - sleep 10
-#     - echo "No lint issues found."
-
-# deploy-job:
-#   stage: deploy
-#   environment: production
-#   script:
-#     - echo "Deploying application..."
-#     - echo "Application successfully deployed."
-
-# # Jobs pour les événements webhooks (issues et merge requests)
-# execute_python_on_issue_update:
-#   stage: execute-script
-#   script:
-#     - timeout 600 python3 /home/gitlab-runner/scripts-secures/script_issue.py  # Limite à 10 minutes (600 secondes)
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
-#   timeout: 10 minutes
-#   after_script:
-#     - echo "Cleaning up after script_issue.py"
-
-# execute_python_on_pr_update:
-#   stage: execute-script
-#   script:
-#     - timeout 600 python3 /home/gitlab-runner/scripts-secures/script_pr.py  # Limite à 10 minutes (600 secondes)
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"'
-#   timeout: 10 minutes
-#   after_script:
-#     - echo "Cleaning up after script_pr.py"
-
 # # Job de débogage pour vérifier le contexte du pipeline
 # debug_pipeline:
 #   stage: execute-script
@@ -157,7 +55,109 @@ deploy-job:      # This job runs in the deploy stage.
 #     - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
 #     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
 #   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'  # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"' # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
+
+
+
+# build-job:       # This job runs in the build stage, which runs first.
+#   stage: build
+#   script:
+#     - echo "Compiling the code..."
+#     - echo "Compile complete."
+
+# unit-test-job:   # This job runs in the test stage.
+#   stage: test    # It only starts when the job in the build stage completes successfully.
+#   script:
+#     - echo "Running unit tests... This will take about 60 seconds."
+#     - sleep 60
+#     - echo "Code coverage is 90%"
+
+# lint-test-job:   # This job also runs in the test stage.
+#   stage: test    # It can run at the same time as unit-test-job (in parallel).
+#   script:
+#     - echo "Linting code... This will take about 10 seconds."
+#     - sleep 10
+#     - echo "No lint issues found."
+
+# deploy-job:      # This job runs in the deploy stage.
+#   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
+#   environment: production
+#   script:
+#     - echo "Deploying application..."
+#     - echo "Application successfully deployed."
+
+
+
+
+
+
+stages:
+  - build
+  - test
+  - deploy
+  - execute-script
+
+variables:
+  GIT_STRATEGY: clone
+
+# Jobs pour le pipeline de base (build, test, deploy)
+build-job:
+  stage: build
+  script:
+    - echo "Compiling the code..."
+    - echo "Compile complete."
+
+unit-test-job:
+  stage: test
+  script:
+    - echo "Running unit tests... This will take about 60 seconds."
+    - sleep 60
+    - echo "Code coverage is 90%"
+
+lint-test-job:
+  stage: test
+  script:
+    - echo "Linting code... This will take about 10 seconds."
+    - sleep 10
+    - echo "No lint issues found."
+
+deploy-job:
+  stage: deploy
+  environment: production
+  script:
+    - echo "Deploying application..."
+    - echo "Application successfully deployed."
+
+# Jobs pour les événements webhooks (issues et merge requests)
+execute_python_on_issue_update:
+  stage: execute-script
+  script:
+    - timeout 600 python3 /home/gitlab-runner/scripts-secures/script_issue.py  # Limite à 10 minutes (600 secondes)
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
+  timeout: 10 minutes
+  after_script:
+    - echo "Cleaning up after script_issue.py"
+
+execute_python_on_pr_update:
+  stage: execute-script
+  script:
+    - timeout 600 python3 /home/gitlab-runner/scripts-secures/script_pr.py  # Limite à 10 minutes (600 secondes)
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"'
+  timeout: 10 minutes
+  after_script:
+    - echo "Cleaning up after script_pr.py"
+
+# Job de débogage pour vérifier le contexte du pipeline
+debug_pipeline:
+  stage: execute-script
+  script:
+    - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
+    - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
+    - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'  # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
 
 
 
