--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,23 +47,23 @@ execute-python-on-pr-update:
     - if: '$CI_PIPELINE_SOURCE == "web"'
     # - if: '$CI_PIPELINE_SOURCE == "trigger"' 
 
-# # Job de débogage pour vérifier le contexte du pipeline
-# debug_pipeline:
-#   stage: execute-script
-#   script:
-#     - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
-#     - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
-#     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"' # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
+# Job de débogage pour vérifier le contexte du pipeline
+debug_pipeline:
+  stage: execute-script
+  script:
+    - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
+    - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
+    - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "trigger"' # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
 
 
 
-# build-job:       # This job runs in the build stage, which runs first.
-#   stage: build
-#   script:
-#     - echo "Compiling the code..."
-#     - echo "Compile complete."
+build-job:       # This job runs in the build stage, which runs first.
+  stage: build
+  script:
+    - echo "Compiling the code..."
+    - echo "Compile complete."
 
 # unit-test-job:   # This job runs in the test stage.
 #   stage: test    # It only starts when the job in the build stage completes successfully.
