--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,6 @@ stages:          # List of stages for jobs, and their order of execution
 #     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
 #   rules:
 #     - if: '$CI_PIPELINE_SOURCE == "trigger"' # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
-
 variables:
   GIT_STRATEGY: clone
 
@@ -63,7 +62,7 @@ execute-python-on-issue-update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "issue"'
+    - if: '$CI_PIPELINE_SOURCE == "issue" || $CI_PIPELINE_SOURCE == "web"'
 
 # Job pour les événements "merge_request"
 execute-python-on-pr-update:
@@ -71,7 +70,7 @@ execute-python-on-pr-update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request" || $CI_PIPELINE_SOURCE == "web"'
 
 # Job de débogage pour vérifier le contexte du pipeline
 debug_pipeline:
@@ -81,7 +80,17 @@ debug_pipeline:
     - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_DEBUG == "true"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
+# Default job to prevent empty pipelines
+default-job:
+  stage: execute-script
+  script:
+    - echo "No specific job matched the pipeline source. Running default job."
+  rules:
+    - if: '$CI_PIPELINE_SOURCE != "issue" && $CI_PIPELINE_SOURCE != "merge_request" && $CI_PIPELINE_SOURCE != "trigger"'
+
+
 
 
 # build-job:       # This job runs in the build stage, which runs first.
