--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,96 +1,58 @@
-# This file is a template, and might need editing before it works on your project.
-# This is a sample GitLab CI/CD configuration file that should run without any modifications.
-# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
-# it uses echo commands to simulate the pipeline execution.
-#
-# A pipeline is composed of independent jobs that run scripts, grouped into stages.
-# Stages run in sequential order, but jobs within stages run in parallel.
-#
-# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
-#
-# You can copy and paste this template into a new `.gitlab-ci.yml` file.
-# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
-#
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
+# # This file is a template, and might need editing before it works on your project.
+# # This is a sample GitLab CI/CD configuration file that should run without any modifications.
+# # It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
+# # it uses echo commands to simulate the pipeline execution.
+# #
+# # A pipeline is composed of independent jobs that run scripts, grouped into stages.
+# # Stages run in sequential order, but jobs within stages run in parallel.
+# #
+# # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
+# #
+# # You can copy and paste this template into a new `.gitlab-ci.yml` file.
+# # You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
+# #
+# # To contribute improvements to CI/CD templates, please follow the Development guide at:
+# # https://docs.gitlab.com/ee/development/cicd/templates.html
+# # This specific template is located at:
+# # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 
-stages:          # List of stages for jobs, and their order of execution
-  - execute-script
-  # - build
-  # - test
-  # - deploy
+# stages:          # List of stages for jobs, and their order of execution
+#   - execute-script
+#   - build
+#   - test
+#   - deploy
 
-# variables:
-#   GIT_STRATEGY: clone
+# # variables:
+# #   GIT_STRATEGY: clone
 
-# # Job pour les événements "issue"
-# execute-python-on-issue-update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-#   rules:
-#     # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"' 
+# # # Job pour les événements "issue"
+# # execute-python-on-issue-update:
+# #   stage: execute-script
+# #   script:
+# #     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+# #   rules:
+# #     # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
+# #     - if: '$CI_PIPELINE_SOURCE == "web"'
+# #     - if: '$CI_PIPELINE_SOURCE == "trigger"' 
 
-# # Job pour les événements "merge_request"
-# execute-python-on-pr-update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"' 
+# # # Job pour les événements "merge_request"
+# # execute-python-on-pr-update:
+# #   stage: execute-script
+# #   script:
+# #     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+# #   rules:
+# #     - if: '$CI_PIPELINE_SOURCE == "web"'
+# #     - if: '$CI_PIPELINE_SOURCE == "trigger"' 
 
-# # Job de débogage pour vérifier le contexte du pipeline
-# debug_pipeline:
-#   stage: execute-script
-#   script:
-#     - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
-#     - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
-#     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"' # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
-variables:
-  GIT_STRATEGY: clone
-
-# Job pour les événements "issue"
-execute-python-on-issue-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "issue" || $CI_PIPELINE_SOURCE == "web"'
-
-# Job pour les événements "merge_request"
-execute-python-on-pr-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request" || $CI_PIPELINE_SOURCE == "web"'
-
-# Job de débogage pour vérifier le contexte du pipeline
-# debug_pipeline:
-#   stage: execute-script
-#   script:
-#     - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
-#     - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
-#     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-
-# Default job to prevent empty pipelines
-default-job:
-  stage: execute-script
-  script:
-    - echo "No specific job matched the pipeline source. Running default job."
-  rules:
-    - if: '$CI_PIPELINE_SOURCE != "issue" && $CI_PIPELINE_SOURCE != "merge_request" && $CI_PIPELINE_SOURCE != "trigger"'
-
-
+# # # Job de débogage pour vérifier le contexte du pipeline
+# # debug_pipeline:
+# #   stage: execute-script
+# #   script:
+# #     - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
+# #     - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
+# #     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
+# #   rules:
+# #     - if: '$CI_PIPELINE_SOURCE == "trigger"' # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
 
 
 # build-job:       # This job runs in the build stage, which runs first.
@@ -119,6 +81,63 @@ default-job:
 #   script:
 #     - echo "Deploying application..."
 #     - echo "Application successfully deployed."
+
+
+
+
+
+
+
+
+
+stages:
+  - execute-script
+
+variables:
+  GIT_STRATEGY: clone
+
+# Job pour les événements "issue"
+execute-python-on-issue-update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "issue" || $CI_PIPELINE_SOURCE == "web"'
+
+# Job pour les événements "merge_request"
+execute-python-on-pr-update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request" || $CI_PIPELINE_SOURCE == "web"'
+
+# Job de débogage pour vérifier le contexte du pipeline
+debug_pipeline:
+  stage: execute-script
+  script:
+    - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
+    - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
+    - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
+# Default job to prevent empty pipelines
+default-job:
+  stage: execute-script
+  script:
+    - echo "No specific job matched the pipeline source. Running default job."
+  rules:
+    - if: '$CI_PIPELINE_SOURCE != "issue" && $CI_PIPELINE_SOURCE != "merge_request" && $CI_PIPELINE_SOURCE != "trigger"'
+
+
+
+
+
+
+
+
+
 
 
 
