--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,6 @@
 
 
 
-
 stages:
   - execute-script
 
@@ -98,7 +97,7 @@ execute-python-on-issue-update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "issue"'  # Exécution uniquement pour les événements "issue"
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && $EVENT_TYPE == "issue"'
 
 # Job pour les événements "merge_request"
 execute-python-on-pr-update:
@@ -106,12 +105,15 @@ execute-python-on-pr-update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request"'  # Exécution uniquement pour les événements "merge_request"
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && $EVENT_TYPE == "merge_request"'
 
-
-
-
-
+# Job par défaut
+default-job:
+  stage: execute-script
+  script:
+    - echo "No specific job matched the pipeline source. Running default job."
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
 
 
 
